--- a/style.css
+++ b/style.css
@@ -128,6 +128,8 @@
     background-color: var(--button-hover);
   }
   
+/* toggle theme */
+
   #themeToggleContainer {
     padding: 10px;
     text-align: right;
